--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
   "nio/SparkFun9DOF": {
-    "Language": "Python",
-    "Version": "1.0.0",
-    "Reference": "github.com/nio-blocks/sparkfun_9dof.git@v1.0.0"
+    "language": "Python",
+    "version": "0.0.1",
+    "reference": "github.com/nio-blocks/sparkfun_9dof.git@v0.0.1"
   }
 }
