--- a/release.json
+++ b/release.json
@@ -2,6 +2,6 @@
   "nio/SparkFun9DOF": {
     "language": "Python",
     "version": "0.0.1",
-    "reference": "github.com/nio-blocks/sparkfun_9dof.git@v0.0.1"
+    "url": "git://github.com/nio-blocks/sparkfun_9dof.git"
   }
 }
